# rnascope

./: .env.example  .gitignore  .render-deploy  AGENT_WORKFLOW.md  Dockerfile  pyproject.toml  render.yaml  send_email.py
rnascope/: __init__.py  api.py  config.py  main.py  notifications.py  species.py
rnascope/agents/: chat.py  interpretation.py  orchestrator.py
rnascope/infra/: aws.py  checkpoint.py
rnascope/models/: schemas.py
rnascope/pipeline/: Dockerfile.worker  result_builder.py  setup_aws.sh  worker.py
rnascope/prompts/: chat.py  interpretation.py  orchestrator.py
rnascope/tools/: definitions.py  handlers.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  PlotlyChart.js  api.js  index.css
web/src/components/: ChartCard.jsx  ChatPanel.jsx  ProgressTracker.jsx
web/src/components/charts/: AlignmentPlots.jsx  AnnotationTable.jsx  BiomarkerPlot.jsx  BiotypePie.jsx  DEGAdvancedPlots.jsx  DEGTable.jsx  DeconvolutionPlot.jsx  ExpressionPlots.jsx  FastQCPlots.jsx  GOBubble.jsx  GeneBrowser.jsx  HeatmapPlot.jsx  KEGGBar.jsx  MethodsText.jsx  PCAPlot.jsx  PlantEnrichment.jsx  QCSummary.jsx  SampleDistancePlot.jsx  TFEnrichment.jsx  TranscriptPlot.jsx  TreatmentHeatmap.jsx  VennDiagram.jsx  VolcanoPlot.jsx  WGCNAPlot.jsx
web/src/pages/: DashboardPage.jsx  ResultsPage.jsx  UploadPage.jsx
