[project]
name = "rnascope"
version = "1.0.0"
description = "Autonomous RNA-seq analysis agent powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "slack-sdk>=3.33.0",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
]

[project.scripts]
rnascope = "rnascope.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
